Fix image sizes on mobile community page.

--- a/_sass/layouts/_community.scss
+++ b/_sass/layouts/_community.scss
@@ -7,4 +7,8 @@
     line-height: 1.15em;
     vertical-align: middle;
   }
+
+  td.logo {
+    width : 65px;
+  }
 }
